--- a/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj
@@ -11,6 +11,8 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\headers\Configuration.h" />
+    <ClInclude Include="..\..\..\..\headers\ExternalDefinitions.h" />
     <ClInclude Include="..\..\..\..\headers\Prueba.h" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +79,7 @@
     <Lib>
       <AdditionalLibraryDirectories>$(SolutionDir)..\..\..\bin\DebugWin32md_static;$(SolutionDir)..\..\..\3rdparty\Boost\bin\Win32\DebugMD;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libboost_thread-vc100-mt-gd.lib</AdditionalDependencies>
+      <AdditionalOptions>/ignore:4006 /ignore:4221 %(AdditionalOptions)</AdditionalOptions>
     </Lib>
     <ProjectReference>
       <LinkLibraryDependencies>true</LinkLibraryDependencies>
