--- a/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj.filters
@@ -14,6 +14,12 @@
     <ClInclude Include="..\..\..\..\headers\Prueba.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\headers\Configuration.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\headers\ExternalDefinitions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\source\Prueba.cpp">
