43-QBaseMatrix4x3 Clase base que representa una matriz de 4 filas y 3 columnas
41-QBaseMatrix4x4
Typo en tag de documentación
39-QBaseMatrix2x2
Typo en tag de documentación
Assert en constructor desde puntero

--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj.filters
@@ -29,6 +29,9 @@
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix4x4.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\headers\QBaseMatrix4x3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\source\QVector3.cpp">
