56 - QQuaternion 58 - QFloat 59 - QAngle 60 - QVF32

--- a/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj
@@ -14,6 +14,9 @@
     <ClInclude Include="..\..\..\..\headers\Configuration.h" />
     <ClInclude Include="..\..\..\..\headers\ExternalDefinitions.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\..\source\Prueba.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5BD44DA1-3EF6-438F-A7E6-4FCC02190AE3}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
