--- a/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj.filters
@@ -18,4 +18,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\..\source\Prueba.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
 </Project>
