66 - QBaseSphere Base class which implements the funcionality of a sphere. 64 - QBaseStraightLine Base class which represents a segment of a straight line.
62 - QBaseTriangle
Changed constructors to be coded with initialization lists.
43 - QBaseMatrix4x3.h
Fixed documentation headers mistake

--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -119,6 +119,8 @@
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix4x4.h" />
     <ClInclude Include="..\..\..\..\headers\QBasePlane.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseQuaternion.h" />
+    <ClInclude Include="..\..\..\..\headers\QBaseSphere.h" />
+    <ClInclude Include="..\..\..\..\headers\QBaseStraightLine.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseTriangle.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseVector2.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseVector3.h" />
