--- a/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj.filters
+++ b/trunk/projects/VS2010/QuimeraEngine/Core/Core.vcxproj.filters
@@ -17,6 +17,9 @@
     <ClInclude Include="..\..\..\..\headers\ExternalDefinitions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\headers\InternalDefinitions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\source\Prueba.cpp">
