50-QMatrix3x3 Class which implements the functionality of a matrix with 3 rows and 3 columns
QBaseDualQuaternion.h
Added inline modifier to two constructors

QBaseMatrix3x3.h
Added constructors from floating point values

--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="..\..\..\..\headers\QBaseTriangle.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseVector2.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseVector3.h" />
+    <ClInclude Include="..\..\..\..\headers\QMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QMatrix4x4.h" />
     <ClInclude Include="..\..\..\..\headers\QFloat.h" />
     <ClInclude Include="..\..\..\..\headers\QQuaternion.h" />
@@ -135,6 +136,7 @@
     <ClInclude Include="..\..\..\..\headers\QVF32.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\source\QMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix4x4.cpp" />
     <ClCompile Include="..\..\..\..\source\QAngle.cpp" />
     <ClCompile Include="..\..\..\..\source\QFloat.cpp" />
