63-QBaseRay Base class which represents a ray in 3D space. A ray is a vector located by a point.
QPlane.h
Spelling fix.
QVector3.h
Spelling fix.

--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="..\..\..\..\headers\QBaseMatrix4x4.h" />
     <ClInclude Include="..\..\..\..\headers\QBasePlane.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseQuaternion.h" />
+    <ClInclude Include="..\..\..\..\headers\QBaseRay.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseSphere.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseStraightLine.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseTriangle.h" />
