52-QMatrix2x2 Class which implements the functionality of matrices with 2 rows and 2 columns.
QBaseMatrix2x2.h
Added two constructors: from a vf32 packed value and from four floating point values.
Fixes some errors in documentation.

QBaseMatrix3x3.h
Fixes some errors in documentation.

QBaseMatrix4x4.h
Fixes some errors in documentation.

QMatrix3x3.h
Fixes some errors in documentation.

QMatrix4x4.h
Fixes some errors in documentation.

--- a/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
+++ b/trunk/projects/VS2010/QuimeraEngine/Tools/Tools.vcxproj
@@ -129,6 +129,7 @@
     <ClInclude Include="..\..\..\..\headers\QBaseVector2.h" />
     <ClInclude Include="..\..\..\..\headers\QBaseVector3.h" />
     <ClInclude Include="..\..\..\..\headers\QDualQuaternion.h" />
+    <ClInclude Include="..\..\..\..\headers\QMatrix2x2.h" />
     <ClInclude Include="..\..\..\..\headers\QMatrix3x3.h" />
     <ClInclude Include="..\..\..\..\headers\QMatrix4x4.h" />
     <ClInclude Include="..\..\..\..\headers\QFloat.h" />
@@ -141,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\source\QDualQuaternion.cpp" />
+    <ClCompile Include="..\..\..\..\source\QMatrix2x2.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix3x3.cpp" />
     <ClCompile Include="..\..\..\..\source\QMatrix4x4.cpp" />
     <ClCompile Include="..\..\..\..\source\QAngle.cpp" />
